[ENG-4551] Cesium/fourth batch of bug fixes (#1895)
## Purpose

Bug fixes for Cesium.

## Summary of Changes

1. No flex on headers provider-description div - This one I found, not QA. It was causing the registries header to separate out anchor tags from the main paragraph and put them in their own little flex space.
2. Choose Bette focus color for sort buttons
3. On collections navbar, don't make background white
4. Ensure power select doesn't get too small
5. Make maintenance banner dismissible
6. Pad the warning text on the VOL banner
7. Make sharing tooltip look good
8. Move ember tooltips to dev dependencies - Not a bug, but a mistake I made earlier that needed fixing
9. Work with newer versions of watchman - unrelated to the cesium upgrade, but I installed watchman on my system and now want the warning message to go away

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -391,7 +391,7 @@
 .nav-tabs>li.active>a,
 .nav-tabs>li.active>a:hover,
 .nav-tabs>li.active>a:focus {
-    background-color: $bg-light;
+    background-color: inherit;
     border: none;
     border-bottom: 2px solid #204762;
 }
@@ -403,7 +403,7 @@
 
 .nav>li>a:hover,
 .nav>li>a:focus {
-    background-color: $bg-light;
+    background-color: inherit;
 }
 
 
